--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -5,13 +5,13 @@
   --sl-color-accent: #8f5e00;
   --sl-color-accent-high: #dbc5a8;
   --sl-color-white: #ffffff;
-  --sl-color-gray-1: #def5de;
-  --sl-color-gray-2: #afcbaf;
-  --sl-color-gray-3: #639c65;
-  --sl-color-gray-4: #2f6633;
-  --sl-color-gray-5: #084512;
-  --sl-color-gray-6: #003107;
-  --sl-color-black: #071e09;
+  --sl-color-gray-1: #eaefea;
+  --sl-color-gray-2: #bec4be;
+  --sl-color-gray-3: #848f84;
+  --sl-color-gray-4: #515b51;
+  --sl-color-gray-5: #323b32;
+  --sl-color-gray-6: #212921;
+  --sl-color-black: #151915;
   --sl-font-system: "Barlow", sans-serif;
 }
 /* Light mode colors. */
@@ -19,14 +19,14 @@
   --sl-color-accent-low: #e5d4bf;
   --sl-color-accent: #916000;
   --sl-color-accent-high: #462c00;
-  --sl-color-white: #071e09;
-  --sl-color-gray-1: #003107;
-  --sl-color-gray-2: #084512;
-  --sl-color-gray-3: #2f6633;
-  --sl-color-gray-4: #639c65;
-  --sl-color-gray-5: #afcbaf;
-  --sl-color-gray-6: #def5de;
-  --sl-color-gray-7: #eefaee;
+  --sl-color-white: #151915;
+  --sl-color-gray-1: #212921;
+  --sl-color-gray-2: #323b32;
+  --sl-color-gray-3: #515b51;
+  --sl-color-gray-4: #848f84;
+  --sl-color-gray-5: #bec4be;
+  --sl-color-gray-6: #eaefea;
+  --sl-color-gray-7: #f5f7f5;
   --sl-color-black: #ffffff;
 }
 
